headline alignment fixes

--- a/core.css
+++ b/core.css
@@ -324,6 +324,8 @@ div[data-refs-self*='"card"'] {
     color: var(--ts-list-bullet-color);
 }
 
+/* ======= Headlines ======== */
+
 .ls-block :is(h1, h2, h3, h4, h5, h6) {
     border-bottom: 0px solid red;
     color: var(--ts-headline-color);
@@ -339,6 +341,28 @@ div[data-refs-self*='"card"'] {
 .editor-inner .h2 {
     border-bottom: 0px solid transparent;
     margin: 0 0 0;
+}
+
+/* ========= Headline fixes =========== */
+.editor-inner .h2, .ls-block h2 {
+    position: relative;
+    top: -3px;
+}
+.editor-inner .h3, .ls-block h3 {
+    position: relative;
+    top: -5px;
+}
+.editor-inner .h4, .ls-block h4 {
+    position: relative;
+    top: -5px;
+}
+.editor-inner .h5, .ls-block h5 {
+    position: relative;
+    top: -7px;
+}
+.editor-inner .h6, .ls-block h6 {
+    position: relative;
+    top: -7px;
 }
 
 mark {
